tests/compile_fail/machine_module/attr_not_on_module.rs
mod blinky {
    use moku::*;

    #[machine_module]
    struct Module;
}

fn main() {}
